src/objects/Conga_Template__c.object
<CustomObject>
    <description>This Object is used for conga composer</description>
    <fields>
        <fullName>Agreement_Terms__c</fullName>
        <label>Agreement Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <label>Alias Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Care_E_Mail__c</fullName>
        <label>Customer Care E-Mail</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Telephone__c</fullName>
        <label>Customer Care Telephone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESA_Agreement__c</fullName>
        <label>ESA Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <label>Federal Tax ID #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_logo__c</fullName>
        <label>Footer logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_logo__c</fullName>
        <label>Header logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Net_Meetering__c</fullName>
        <label>Net Meetering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPCO_Service_Territory__c</fullName>
        <formula>Supplier_Name__r.Supplier_DUNS__c+&apos;-&apos;+text(Service_Territory__c)</formula>
        <label>OPCO_Service_Territory_Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Act__c</fullName>
        <label>Payment Act</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_language__c</fullName>
        <label>RPS language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RTO__c</fullName>
        <formula>CASE( Service_Territory__c , 
&quot;DAYTON&quot;, &quot;PJM&quot;, 
&quot;DEOHIO&quot;, &quot;PJM&quot;, 
&quot;FEOHIO&quot;, &quot;PJM&quot;, 
&quot;AEPOHIO&quot;, &quot;PJM&quot;, 
&quot;COMED-IL&quot;, &quot;PJM&quot;, 
&quot;AMEREN-IL&quot;, &quot;MISO&quot;, 
&quot;WPENN-PA&quot;, &quot;PJM&quot;,
&quot;Duquesne - PA&quot;, &quot;PJM&quot;,
&quot;MetEd - PA&quot;, &quot;PJM&quot;,
&quot;PECO - PA&quot;, &quot;PJM&quot;,
&quot;Penelec - PA&quot;, &quot;PJM&quot;,
&quot;PPL - PA&quot;, &quot;PJM&quot;,
&quot;Penn Power - PA&quot;, &quot;PJM&quot;,
&quot;Pike County - PA&quot;, &quot;PJM&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RTO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Block__c</fullName>
        <label>Signature Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Code__c</fullName>
        <formula>Supplier_Name__r.Supplier_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact__c</fullName>
        <label>Supplier Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Duns__c</fullName>
        <formula>Supplier_Name__r.Supplier_DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Duns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipName>Conga</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_d_b_a__c</fullName>
        <label>Supplier d/b/a</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voluntary_Rec__c</fullName>
        <label>Voluntary Rec</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>signature__c</fullName>
        <label>signature</label>
        <type>TextArea</type>
    </fields>
    <label>Conga Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Territory__c</columns>
        <columns>Supplier_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conga Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>